Session 12 - Ingress, ConfigMaps & Secrets/ingress/apps.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-one
spec:
  replicas: 2
  selector:
    matchLabels: { app: app-one }
  template:
    metadata:
      labels: { app: app-one }
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo:1.0
          args: ["-text=this is APP ONE", "-listen=:8080"]
---
apiVersion: v1
kind: Service
metadata:
  name: app-one
spec:
  selector: { app: app-one }
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-two
spec:
  replicas: 2
  selector:
    matchLabels: { app: app-two }
  template:
    metadata:
      labels: { app: app-two }
    spec:
      containers:
        - name: app
          image: hashicorp/http-echo:1.0
          args: ["-text=this is APP TWO", "-listen=:8080"]
---
apiVersion: v1
kind: Service
metadata:
  name: app-two
spec:
  selector: { app: app-two }
  ports:
    - port: 80
      targetPort: 8080
